--- a/fmapp2/res/values/strings.xml
+++ b/fmapp2/res/values/strings.xml
@@ -179,8 +179,8 @@
     <string name="typ_Religious_music">Religious music</string>
     <string name="typ_Religious_talk">Religious talk</string>
     <string name="typ_Rhythm_and_Blues">Rhythm and Blues</string>
-    <string name="typ_Spanish_music">Spanish Music</string>
-    <string name="typ_Spanish_talk">Spanish Talk</string>
+    <string name="typ_Spanish_music">Spanish music</string>
+    <string name="typ_Spanish_talk">Spanish talk</string>
     <string name="typ_Soft">Soft</string>
     <string name="typ_Soft_Rock">Soft Rock</string>
     <string name="typ_Soft_Rhythm_and_Blues">Soft Rhythm and Blues</string>
